--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión de Citas - MedacDent</title>
+    <title>Citas - MedacDent</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
     <header>
         <img src="logo.png" alt="MedacDent">
-        <h1>Gestión de Citas</h1>
+        <h1>Citas</h1>
     </header>
 
     <main>
@@ -77,7 +78,6 @@
         </p>
     </footer>
 
-    <script src="script.js"></script>
 </body>
 
 </html>
